fix safari private browsing mode

--- a/services/app/bower.json
+++ b/services/app/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular-chart.js": "~0.7.3",
     "angular-ui-router": "~0.2.15",
-    "angular-breadcrumb": "~0.4.1"
+    "angular-breadcrumb": "~0.4.1",
+    "angular-local-storage": "~0.2.2"
   }
 }
