--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "abcxyz",
   "dependencies": {
     "express": "^4.10.2",
+    "node-json-db": "^0.7.3",
     "serve-static": "^1.11.1",
     "socket.io": "^1.4.8"
   }
